--- a/stablecolab_demo.ipynb
+++ b/stablecolab_demo.ipynb
@@ -34,22 +34,13 @@
         "\n",
         "#@title Install dependencies\n",
         "\n",
-        "import os\n",
         "\n",
-        "os.system(\"pip install stablepy==0.5.1\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GtTdza7SNexT",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
         "\n",
-        "#@title download model\n",
+        "!pip install stablepy==0.5.1\n",
+        "\n",
+        "\n",
+        "\n",
+        "# download model\n",
         "\n",
         "\n",
         "%cd /content/\n",
@@ -64,7 +55,11 @@
         "!wget https://huggingface.co/embed/negative/resolve/main/bad-artist.pt\n",
         "\n",
         "# Upscaler\n",
-        "!wget https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth"
+        "!wget https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth\n",
+        "\n",
+        "\n",
+        "\n",
+        "!wget https://huggingface.co/Ryouko65777/RealESRGAN_x4plus_anime_6B/resolve/main/RealESRGAN_x4plus_anime_6B.pth -O /content/upscaler/RealESRGAN_x4plus_anime_6B.pth"
       ]
     },
     {
@@ -78,8 +73,10 @@
         "from urllib.parse import urlparse, parse_qs, unquote\n",
         "\n",
         "# Set variables manually since we can't use argparse in Colab\n",
-        "url = 'https://civitai.com/api/download/models/834507' #@param {type:\"string\"}  # Replace with your desired URL\n",
-        "output_path = '/content' #@param {type:\"string\"}  # Output directory on Colab\n",
+        "url = 'https://civitai.com/api/download/models/834507' #@param {type:\"string\"}\n",
+        "  # Replace with your desired URL\n",
+        "output_path = \"/content\" #@param {type:\"string\"}\n",
+        "  # Output directory on Colab\n",
         "\n",
         "CHUNK_SIZE = 1638400\n",
         "TOKEN_FILE = Path.home() / '.civitai' / 'config'\n",
